# toml-lsp

./: Cargo.toml
src/: main.rs
src/lexer/: char_iter.rs  mod.rs  token.rs
src/parser/: error.rs  mod.rs  next.rs  syntax.rs  utils.rs
test_data/parser/array/: 1.expect  1.toml
test_data/parser/header/: 1.expect  1.toml
test_data/parser/let/: 1.expect  1.toml  2.expect  2.toml
