[package]
name = "toml-lsp"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
lsp-server = "0.5.0"
lsp-types = "0.86.0"
rowan = "0.10.0"
