[package]
name = "toml-lsp"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
log = "0.4.13"
lsp-server = "0.5.0"
lsp-types = "0.86.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.10.0"
serde_json = "1.0.61"
simplelog = "0.9.0"
thiserror = "1.0.23"

[dev-dependencies]
expect-test = "1.1.0"
pretty_assertions = "0.6.1"
